devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
MT_API int32_t __stdcall MT_Get_Axis_Status_Pos(uint16_t AObj,int32_t* pPos);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Pos(int32_t ADev,uint16_t AObj,int32_t* pPos);
MT_API int32_t __stdcall MT_Get_Axis_Status_Zero(uint16_t AObj,int32_t* pZero);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Zero(int32_t ADev,uint16_t AObj,int32_t* pZero);
MT_API int32_t __stdcall MT_Get_Axis_Status_Mode(uint16_t AObj,int32_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Mode(int32_t ADev,uint16_t AObj,int32_t* pMode);
//设置0位模式
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Home_Switch(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Home_Switch(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Encoder_Index(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Encoder_Index(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Encoder_Home_Switch(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Encoder_Home_Switch(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Home_Zero(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Home_Zero(int32_t ADev,uint16_t AObj);
//设置0位模式目标速度
MT_API int32_t __stdcall MT_Set_Axis_Home_V(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Home_V(int32_t ADev,uint16_t AObj,int32_t Value);
//停止0位模式
MT_API int32_t __stdcall MT_Set_Axis_Home_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Home_Stop(int32_t ADev,uint16_t AObj);
//软件限位
//设置软件限位值
MT_API int32_t __stdcall MT_Set_Axis_Software_Limit_Neg_Value(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_Limit_Neg_Value(int32_t ADev,uint16_t AObj,int32_t Value);
//设置软件限位值
MT_API int32_t __stdcall MT_Set_Axis_Software_Limit_Pos_Value(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_Limit_Pos_Value(int32_t ADev,uint16_t AObj,int32_t Value);
//使能软件限位模式
MT_API int32_t __stdcall MT_Set_Axis_Software_Limit_Enable(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_Limit_Enable(int32_t ADev,uint16_t AObj);
//停止软件限位模式
MT_API int32_t __stdcall MT_Set_Axis_Software_Limit_Disable(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_Limit_Disable(int32_t ADev,uint16_t AObj);
////////////////////////////////////////////////////////////////////////
//存储器
//读取存储器长度
MT_API int32_t __stdcall MT_Get_System_Mem_Len(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_System_Mem_Len(int32_t ADev,int32_t* pValue);
//读取存储器数据
MT_API int32_t __stdcall MT_Get_System_Mem_Data(uint16_t AObj,uint8_t* pValue);
MT_API int32_t __stdcall MT_M_Get_System_Mem_Data(int32_t ADev,uint16_t AObj,uint8_t* pValue);
//设置存储器数据
MT_API int32_t __stdcall MT_Set_System_Mem_Data(uint16_t AObj,uint8_t Value);
MT_API int32_t __stdcall MT_M_Set_System_Mem_Data(int32_t ADev,uint16_t AObj,uint8_t Value);
//====================================================================
// 系统参数存储器
//======================================================================
// 读取存储器长度
MT_API int32_t __stdcall MT_Get_Param_Mem_Len(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Param_Mem_Len(int32_t ADev,int32_t* pValue);
//读取存储器数据
MT_API int32_t __stdcall MT_Get_Param_Mem_Data(uint16_t AObj,uint8_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Param_Mem_Data(int32_t ADev,uint16_t AObj,uint8_t* pValue);
//设置存储器数据
MT_API int32_t __stdcall MT_Set_Param_Mem_Data(uint16_t AObj,uint8_t Value);
MT_API int32_t __stdcall MT_M_Set_Param_Mem_Data(int32_t ADev,uint16_t AObj,uint8_t Value);
//====================================================================
//光隔输入
//======================================================================
//通道数
MT_API int32_t __stdcall MT_Get_Optic_In_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_In_Num(int32_t ADev,int32_t* pValue);
//不算复用电机的限位和零位
MT_API int32_t __stdcall MT_Get_Optic_In_Basic_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_In_Basic_Num(int32_t ADev,int32_t* pValue);
//读取单通道值
MT_API int32_t __stdcall MT_Get_Optic_In_Single(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_In_Single(int32_t ADev,uint16_t AObj,int32_t* pValue);
//读取所有通道值
MT_API int32_t __stdcall MT_Get_Optic_In_All(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_In_All(int32_t ADev,int32_t* pValue);
//====================================================================
//光隔输出
//======================================================================
//通道数
MT_API int32_t __stdcall MT_Get_Optic_Out_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_Out_Num(int32_t ADev,int32_t* pValue);
//设置单通道值
MT_API int32_t __stdcall MT_Set_Optic_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Optic_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_Optic_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Optic_Out_All(int32_t ADev,int32_t Value);
//读取单通道值
MT_API int32_t __stdcall MT_Get_Optic_Out_Single(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_Out_Single(int32_t ADev,uint16_t AObj,int32_t* pValue);
//读取所有通道值
MT_API int32_t __stdcall MT_Get_Optic_Out_All(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Optic_Out_All(int32_t ADev,int32_t* pValue);
//====================================================================
//OC输出
//======================================================================
//通道数
MT_API int32_t __stdcall MT_Get_OC_Out_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_OC_Out_Num(int32_t ADev,int32_t* pValue);
//设置单通道值
MT_API int32_t __stdcall MT_Set_OC_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_OC_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_OC_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_OC_Out_All(int32_t ADev,int32_t Value);
//读取单通道值
MT_API int32_t __stdcall MT_Get_OC_Out_Single(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_OC_Out_Single(int32_t ADev,uint16_t AObj,int32_t* pValue);
//读取所有通道值
MT_API int32_t __stdcall MT_Get_OC_Out_All(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_OC_Out_All(int32_t ADev,int32_t* pValue);
//直线插补相关
//设置直线插补主轴及速度
MT_API int32_t __stdcall MT_Set_Axis_Line_Axis(uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Axis(int32_t ADev,uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
//设置直线插补加速度
MT_API int32_t __stdcall MT_Set_Axis_Line_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补减速度
MT_API int32_t __stdcall MT_Set_Axis_Line_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补速度
MT_API int32_t __stdcall MT_Set_Axis_Line_V(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_V(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补启动
MT_API int32_t __stdcall MT_Set_Axis_Line_Run(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Run(int32_t ADev,uint16_t AObj);
//设置直线插补停止
MT_API int32_t __stdcall MT_Set_Axis_Line_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Stop(int32_t ADev,uint16_t AObj);
//设置直线插补急停
MT_API int32_t __stdcall MT_Set_Axis_Line_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Halt(int32_t ADev,uint16_t AObj);
//设置直线插补相对移动目标
MT_API int32_t __stdcall MT_Set_Axis_Line_Rel(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Rel(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//设置直线插补绝对移动目标
MT_API int32_t __stdcall MT_Set_Axis_Line_Abs(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Abs(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//设置直线插补启动
MT_API int32_t __stdcall MT_Set_Axis_Line_Run_Rel(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Run_Rel(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Axis_Line_Run_Abs(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Run_Abs(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//读取直线插补模块
MT_API int32_t __stdcall MT_Get_Axis_Line_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Num(int32_t ADev,int32_t* pValue);
//插补运动状态
MT_API int32_t __stdcall MT_Get_Axis_Line_Status(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Status(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补轴
MT_API int32_t __stdcall MT_Get_Axis_Line_Axis(uint16_t AObj,int32_t* pID0,int32_t* pID1);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Axis(int32_t ADev,uint16_t AObj,int32_t* pID0,int32_t* pID1);
//插补加速度
MT_API int32_t __stdcall MT_Get_Axis_Line_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补减速度
MT_API int32_t __stdcall MT_Get_Axis_Line_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补速度
MT_API int32_t __stdcall MT_Get_Axis_Line_V(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_V(int32_t ADev,uint16_t AObj,int32_t* pValue);
//====================================================================
//AD输入
//======================================================================
//通道数
MT_API int32_t __stdcall MT_Get_AD_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_AD_Num(int32_t ADev,int32_t* pValue);
//读取单通道值
MT_API int32_t __stdcall MT_Get_AD_Data(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_AD_Data(int32_t ADev,uint16_t AObj,int32_t* pValue);