devices/MRE_Controller_Data_Package/WIN64/MT_API.pas


function MT_Get_Axis_Status_Pos(AObj:Word;pPos:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Pos(ADev:Integer;AObj:Word;pPos:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status_Zero(AObj:Word;pZero:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Zero(ADev:Integer;AObj:Word;pZero:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status_Mode(AObj:Word;pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Mode(ADev:Integer;AObj:Word;pMode:PInteger):Integer;stdcall;external 'MT_API.dll'

//设置0位模式
function MT_Set_Axis_Mode_Home(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Home(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Home_Home_Switch(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Home_Home_Switch(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Home_Encoder_Index(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Home_Encoder_Index(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Home_Encoder_Home_Switch(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Home_Encoder_Home_Switch(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Home_Home_Zero(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Home_Home_Zero(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'


//设置0位模式目标速度
function MT_Set_Axis_Home_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Home_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//停止0位模式
function MT_Set_Axis_Home_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Home_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

//软件限位
//设置软件限位值
function MT_Set_Axis_Software_Limit_Neg_Value(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_Limit_Neg_Value(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//设置软件限位值
function MT_Set_Axis_Software_Limit_Pos_Value(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_Limit_Pos_Value(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//使能软件限位模式
function MT_Set_Axis_Software_Limit_Enable(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_Limit_Enable(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

//停止软件限位模式
function MT_Set_Axis_Software_Limit_Disable(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_Limit_Disable(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

////////////////////////////////////////////////////////////////////////
//存储器
//读取存储器长度
function MT_Get_System_Mem_Len(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_System_Mem_Len(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_System_Mem_Data(AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_System_Mem_Data(ADev:Integer;AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_System_Mem_Data(AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_System_Mem_Data(ADev:Integer;AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//====================================================================
// 系统参数存储器
//======================================================================
// 读取存储器长度
function MT_Get_Param_Mem_Len(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Param_Mem_Len(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取存储器数据
function MT_Get_Param_Mem_Data(AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Param_Mem_Data(ADev:Integer;AObj:Word;pValue:PByte):Integer;stdcall;external 'MT_API.dll'
//设置存储器数据
function MT_Set_Param_Mem_Data(AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Param_Mem_Data(ADev:Integer;AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//====================================================================
//光隔输入
//======================================================================
//通道数
function MT_Get_Optic_In_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_In_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//不算复用电机的限位和零位
function MT_Get_Optic_In_Basic_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_In_Basic_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取单通道值
function MT_Get_Optic_In_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_In_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'


//读取所有通道值
function MT_Get_Optic_In_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_In_All(ADev:Integer; pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//====================================================================
//光隔输出
//======================================================================
//通道数
function MT_Get_Optic_Out_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_Out_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置单通道值
function MT_Set_Optic_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Optic_Out_Single(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置所有通道值
function MT_Set_Optic_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Optic_Out_All(ADev:Integer;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取单通道值
function MT_Get_Optic_Out_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_Out_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取所有通道值
function MT_Get_Optic_Out_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Optic_Out_All(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//====================================================================
//OC输出
//======================================================================
//通道数
function MT_Get_OC_Out_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_OC_Out_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置单通道值
function MT_Set_OC_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_OC_Out_Single(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置所有通道值
function MT_Set_OC_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_OC_Out_All(ADev:Integer;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取单通道值
function MT_Get_OC_Out_Single(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_OC_Out_Single(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取所有通道值
function MT_Get_OC_Out_All(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_OC_Out_All(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//直线插补相关
//设置直线插补主轴及速度
function MT_Set_Axis_Line_Axis(AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Axis(ADev:Integer;AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补加速度
function MT_Set_Axis_Line_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//设置直线插补减速度
function MT_Set_Axis_Line_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补速度
function MT_Set_Axis_Line_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动
function MT_Set_Axis_Line_Run(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Run(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补停止
function MT_Set_Axis_Line_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补急停
function MT_Set_Axis_Line_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补相对移动目标
function MT_Set_Axis_Line_Rel(AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Rel(ADev:Integer;AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补绝对移动目标
function MT_Set_Axis_Line_Abs(AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Abs(ADev:Integer;AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

//设置直线插补启动
function MT_Set_Axis_Line_Run_Rel(AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Run_Rel(ADev:Integer;AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_Run_Abs(AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Line_Run_Abs(ADev:Integer;AObj:Word;Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'

//读取直线插补模块
function MT_Get_Axis_Line_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//插补运动状态
function MT_Get_Axis_Line_Status(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_Status(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//插补轴
function MT_Get_Axis_Line_Axis(AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_Axis(ADev:Integer;AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Line_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Line_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//插补速度
function MT_Get_Axis_Line_V(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Line_V(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//====================================================================
//AD输入
//======================================================================
//通道数
function MT_Get_AD_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_AD_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取单通道值
function MT_Get_AD_Data(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_AD_Data(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
